yong 으로 등록된 vendor 가 존재. 수정함

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "yong/hello_composer",
+    "name": "dev1234yong/hello_composer",
     "description": "hi my first composer pkg",
     "type": "library",
     "license": "yong",
