https://spdx.org/licenses/ 에 등록된 license만 입력 가능. 임의명시불가. 수정함

--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "dev1234yong/hello_composer",
     "description": "hi my first composer pkg",
     "type": "library",
-    "license": "dev1234yong",
+    "license": "",
     "authors": [
         {
             "name": "dev1234yong",
